--- a/Frontend/src/admin.css
+++ b/Frontend/src/admin.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    font-family: 'Segoe UI';
 }
 
 header {
@@ -7,7 +8,6 @@ header {
     display: flex;
     align-items: center;
     height: 13rem;
-    width: 42rem;
 }
 
 .button_profile {
@@ -39,7 +39,6 @@ footer {
     background-color: #BFCAD7;
     display: flex;
     justify-content: space-between;
-    width: 40rem;
 }
 
 footer section {
@@ -56,7 +55,6 @@ main {
     align-items: center;
     padding: 0.5rem;
     background-color: #003366;
-    width: 41rem;
 }
 
 .social_media {
@@ -71,7 +69,7 @@ main {
 #features {
     display: inline-flex;
     flex-direction: column;
-    width: 20rem;
+    width: 30rem;
 }
 
 #features article{
@@ -83,11 +81,33 @@ main {
     background-color: #BFCAD7;
 }
 
+#main_image{
+    width: 50%;
+    margin-left: 30%;
+}
+
 .feature_img {
-    height: 5rem;
+    height: 3rem;
 }
 
 #admin2 {
     height: 20rem;
 }
 
+#welcome {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 20rem;
+    font-size: xx-large;
+    background-color: #003366;
+    color: white;
+}
+
+#features p {
+    font-size: xx-large;
+}
+
+#follow_us {
+    text-align: center;
+}
