--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -55,6 +55,7 @@ main {
     align-items: center;
     padding: 0.5rem;
     background-color: #003366;
+    padding-left: 18rem;
 }
 
 .social_media {
@@ -96,18 +97,30 @@ main {
 
 #welcome {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 20rem;
     font-size: xx-large;
     background-color: #003366;
     color: white;
+    padding-right: 15rem;
 }
 
 #features p {
     font-size: xx-large;
 }
 
+article:hover {
+    color: white;
+    cursor: pointer;
+}
+
 #follow_us {
     text-align: center;
+}
+
+#main_2_img {
+    width: 30%;
+    margin-left: 24%;
+    cursor: pointer;
 }
