restore password creation
view is created to recover password, just like Figma

--- a/Frontend/src/stylespassword.css
+++ b/Frontend/src/stylespassword.css
@@ -15,7 +15,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px; 
-    width: 100%; 
+    width: 100%;
 }
 
 h2 {
@@ -29,21 +29,21 @@ label {
     color: #090909;
 }
 
-input[type="text"], input[type="email"], input[type="date"], input[type="password"] {
-    width: 100%;
-    padding: 10px;
+input[type="password"] {
+    width: 90%; 
+    padding: 10px 10px 10px 40px; 
     margin: 5px 0 10px;
     border: 1px solid #496D8C;
     border-radius: 4px;
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    background-size: 20px; 
+    box-sizing: border-box; 
 }
 
-.role-checkbox {
-    margin: 5px 0;
-}
-
-.role-checkbox label {
-    display: inline-block;
-    margin-right: 15px;
+input[type="password"]:focus {
+    border-color: #024873;
+    outline: none;
 }
 
 .btn {
@@ -54,6 +54,10 @@ input[type="text"], input[type="email"], input[type="date"], input[type="passwor
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #01395e;
 }
 
 .form-group {
@@ -67,8 +71,8 @@ input[type="text"], input[type="email"], input[type="date"], input[type="passwor
 }
 
 .icon-left img {
-    width: 80px;  
-    height: 80px; 
+    width: 80px;
+    height: 80px;
 }
 
 .icon-right {
@@ -79,4 +83,13 @@ input[type="text"], input[type="email"], input[type="date"], input[type="passwor
 
 .icon-right img {
     width: 60px;
+}
+
+
+input#new_password {
+    background-image: url("/Frontend/assets/img/password.png"); 
+}
+
+input#confirm_password {
+    background-image: url("/Frontend/assets/img/password.png");
 }
