feat (frontend):Add  folders for the views
Add folders for the views of the frontend

--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -28,19 +28,19 @@
                     <p>Download Schedule</p>
                     <img src="../../assets/img/clock.png" alt="" class="item">
                 </div>
-                <div class="grid-item2 card card-family"">
+                <div class="grid-item2 card card-family">
                     <p>Record Qualifications</p>
                     <img src="../../assets/img/qualification.png" alt="" class="item">
                 </div>
-                <div class="grid-item3 card card-family"">
+                <div class="grid-item3 card card-family">
                     <p>Manage Course</p>
                     <img src="../../assets/img/course.png" alt="" class="item">
                 </div>
-                <div class="grid-item4 card card-family"">
+                <div class="grid-item4 card card-family">
                     <p>Attendance Registration</p>
                     <img src="../../assets/img/attendance.png" alt="" class="item">
                 </div>
-                <div class="grid-item5 card1 card-family"">
+                <div class="grid-item5 card1 card-family">
                     <p>Calendar</p>
                     <img src="../../assets/img/calendar1.png" alt="" class="item">
                 </div>
