--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -21,18 +21,18 @@
       <img src="/Frontend/assets/img/admin.png" id="welcome_img" alt="">
     </section>
 
-    <main>
-      <section id="features">
+    <main id="main_admin">
+      <section id="features_admin">
         <article>
-          <p>Course</p>
+          <p class="features_p">Course</p>
           <img src="/Frontend/assets/img/course.png" class="feature_img" alt="">
         </article>
         <article>
-          <p>Qualifications</p>
+          <p class="features_p">Qualifications</p>
           <img src="/Frontend/assets/img/qualification.png" class="feature_img" alt="">
         </article>
         <article>
-          <p>Attendance record</p>
+          <p class="features_p">Attendance record</p>
           <img src="/Frontend/assets/img/attendance.png" class="feature_img" alt="">
         </article>
 
