--- a/Frontend/src/views/home/home.html
+++ b/Frontend/src/views/home/home.html
@@ -26,7 +26,7 @@
       <h1>World University</h1>
     </section>
 
-    <main>
+    <main id="main_home">
       <section>
         <img src="/Frontend/assets/img/home_img.png" id="home_img" alt="">
       </section>
