--- a/Frontend/src/views/student/student.html
+++ b/Frontend/src/views/student/student.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student</title>
-    <link rel="stylesheet" href="/Frontend/src/styles.css"/>
+    <link rel="stylesheet" href="/Frontend/src/styles/david.css"/>
   </head>
 
   <body>
@@ -21,26 +21,26 @@
       <img src="/Frontend/assets/img/student.png" id="welcome_img" alt="">
     </section>
 
-    <main>
-      <section id="features">
-        <article>
-          <p>Course</p>
+    <main id="main_student">
+      <section id="features_student">
+        <article id="course">
+          <p class="features_p">Course</p>
           <img src="/Frontend/assets/img/course.png" class="feature_img" alt="">
         </article>
-        <article>
-          <p>Qualifications</p>
+        <article id="qualifications">
+          <p class="features_p">Qualifications</p>
           <img src="/Frontend/assets/img/qualification.png" class="feature_img"  alt="">
         </article>
-        <article>
-          <p>Attendance record</p>
+        <article id="attendance_record">
+          <p class="features_p">Attendance record</p>
           <img src="/Frontend/assets/img/attendance.png" class="feature_img"  alt="">
         </article>
-        <article>
-          <p>Download schedule</p>
+        <article id="download_schedule">
+          <p class="features_p">Download schedule</p>
           <img src="/Frontend/assets/img/schedule.png" class="feature_img"  alt="">
         </article>
-        <article>
-          <p>Enrollment</p>
+        <article id="enrollment">
+          <p class="features_p">Enrollment</p>
           <img src="/Frontend/assets/img/enrollment.png"class="feature_img"  alt="">
         </article>
       </section>
@@ -72,6 +72,6 @@
         <a href="https://www.twitter.com/"><img src="/Frontend/assets/img/x.png" alt="Twitter" class="social_media"></a>
       </section>
     </footer>
-    <script src="Frontend/src/app.js"></script>
+    <script src="/Frontend/src/js/student.js"></script>
   </body>
 </html>
