--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
-    <link rel="stylesheet" href="/Frontend/src/styles.css"/>
+    <link rel="stylesheet" href="/Frontend/src/styles/david.css"/>
   </head>
 
   <body>
@@ -65,6 +65,6 @@
         <a href="https://www.twitter.com/"><img src="/Frontend/assets/img/x.png" alt="Twitter" class="social_media"></a>
       </section>
     </footer>
-    <script src="Frontend/src/app.js"></script>
+    <script src="/Frontend/src/js/admin.js"></script>
   </body>
 </html>
