--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -23,15 +23,15 @@
 
     <main id="main_admin">
       <section id="features_admin">
-        <article>
+        <article id="course_a">
           <p class="features_p">Course</p>
           <img src="/Frontend/assets/img/course.png" class="feature_img" alt="">
         </article>
-        <article>
+        <article id="qualifications_a">
           <p class="features_p">Qualifications</p>
           <img src="/Frontend/assets/img/qualification.png" class="feature_img" alt="">
         </article>
-        <article>
+        <article id="attendance_a">
           <p class="features_p">Attendance record</p>
           <img src="/Frontend/assets/img/attendance.png" class="feature_img" alt="">
         </article>
