--- a/Frontend/src/views/staff/staff-features.html
+++ b/Frontend/src/views/staff/staff-features.html
@@ -27,7 +27,7 @@
     </aside>
 
     <nav class="nav">
-        <ul class="list">
+        <section class="list">
             <p><b>
                 <a href="#chart-1">Courses</a>
                 |
@@ -37,7 +37,7 @@
                 |
                 <a href="#chart-4">Subjects</a> 
             </b></p>
-        </ul>
+        </section>
     </nav>
 
     <main class="main">
