--- a/Frontend/src/views/login2.html
+++ b/Frontend/src/views/login2.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../Style/Home.css" />
+    <link rel="stylesheet" href="/Frontend/src/styles/Home.css" />
 
 </head>
 <body>
     <div class="container">
         <div class="icon-left">
-            <img src="../Images/Logo.png" alt="Icono Izquierda" class="small-icon">
+            <img src="/Frontend/src/img/Logo.png" alt="Icono Izquierda" class="small-icon">
         </div>
         <div class="icon-right">
-            <img src="../Images/Exit.png" alt="Icono Derecha" class="large-icon">
+            <img src="/Frontend/src/img/exit.png" alt="Icono Derecha" class="large-icon">
         </div>
 
         <div class="login-box">
@@ -22,7 +22,7 @@
                 <!-- Username -->
                 <div class="input-group">
                     <span class="icon">
-                        <img src="../Images/User.png" alt="Username Icon">
+                        <img src="/Frontend/src/img/User.png" alt="Username Icon">
                     </span>
                     <input type="text" placeholder="Username" required>
                 </div>
@@ -30,7 +30,7 @@
                 <!-- Password -->
                 <div class="input-group">
                     <span class="icon">
-                        <img src="../Images/Password.png" alt="Password Icon">
+                        <img src="/Frontend/src/img/password.png" alt="Password Icon">
                     </span>
                     <input type="password" placeholder="Password" required>
                 </div>
