--- a/Frontend/src/views/main.html
+++ b/Frontend/src/views/main.html
@@ -3,68 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../../img/Logo.png">
-    <link rel="stylesheet" href="../../styles/main.css">
-    <link rel="stylesheet" href="../../styles/staff-features.css">
+    <link rel="icon" href="../img/Logo.png">
+    <link rel="stylesheet" href="../styles/main.css">
+    <title>Main</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Staff Dashboard</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="grid-container">
     <header class="header">
-        <img src="../../img/Logo.png" alt="" class="logo">
+        <a href="../views/home/home.html">
+            <img src="../img/Logo.png" alt="" class="logo">
+        </a>
         <div class="flex-container">
-            <button class="button">Staff</button>
-            <img src="../../img/icon_person.png" alt="" class="icon_person">
+            <button class="button">User</button>
+            <img src="../img/icon_person.png" alt="" class="icon_person">
         </div>
     </header>
 
     <aside class="aside">
-        <p class="title">Welcome Staff</p>
-        <img src="../../img/staff-img.png" alt="" class="img-aside">
+        <p class="title">Welcome User</p>
+        <img src="../img/teachers.png" alt="" class="img-aside">
     </aside>
 
     <nav class="nav">
         <section class="list">
             <p><b>
-                <a href="#chart-1" class="feature">Courses</a>
+                <a href="#chart-1" class="feature">Feature1</a>
                 |
-                <a href="#chart-2" class="feature">Teachers</a>
+                <a href="#chart-2" class="feature">Feature2</a>
                 |
-                <a href="#chart-3" class="feature">Students</a>
+                <a href="#chart-3" class="feature">Feature3</a>
                 |
-                <a href="#chart-4" class="feature">Subjects</a> 
+                <a href="#chart-4" class="feature">Feature4</a> 
             </b></p>
         </section>
     </nav>
 
     <main class="main">
         <section class="first-chart">
+            <i class='bx bxs-hand-up'></i>
             <h3>What do you want to do?</h3>
-            <i class='bx bx-upside-down'></i>
         </section>
         <section class="chart" id="chart-1">
-            <h3>Courses</h3>
+            <h3>Feature1</h3>
             <div class="div-chart">
 
             </div>
         </section>
         <section class="chart" id="chart-2">
-            <h3>Teachers</h3>
+            <h3>Feature2</h3>
             <div class="div-chart">
 
             </div>
         </section>
         <section class="chart" id="chart-3">
-            <h3>Students</h3>
+            <h3>Feature3</h3>
             <div class="div-chart">
 
             </div>
         </section>
         <section class="chart" id="chart-4">
-            <h3>Subjects</h3>
+            <h3>Feature4</h3>
             <div class="div-chart">
 
             </div>
@@ -74,13 +72,13 @@
     <footer class="footer">
         <div>
             <h3>Contact Us</h3>
-            <p>Site</p>
-            <p>Number 1</p>
-            <p>Number 2</p>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
         </div>
         <div>
             <h3>About Us</h3>
-            <a href="../../views/home/home.html">Home</a>
+            <a href="../views/home/home.html">Home</a>
             <p>Mission</p>
             <p>Vision</p>
         </div>
@@ -94,7 +92,7 @@
         </div>
     </footer>
 
-    <script src="../../js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
 
