--- a/Frontend/src/views/user.html
+++ b/Frontend/src/views/user.html
@@ -27,8 +27,6 @@
     <nav class="nav">
         <section class="list">
             <p><b>
-                <a href="#chart-0" class="feature">Start</a>
-                |
                 <a href="#chart-1" class="feature">Feature1</a>
                 |
                 <a href="#chart-2" class="feature">Feature2</a>
@@ -41,7 +39,7 @@
     </nav>
 
     <main class="main">
-        <section class="first-chart" id="chart-0">
+        <section class="first-chart">
             <i class='bx bxs-hand-up'></i>
             <h3>What do you want to do?</h3>
         </section>
