--- a/Frontend/src/views/student/course.html
+++ b/Frontend/src/views/student/course.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <img src="/Frontend/assets/img/Logo.png" id="logo" alt="">
+      <img src="/Frontend/src/img/Logo.png" id="logo" alt="">
       <section id="right_header">
         <button class="button_profile">Student</button>
         <img src="/Frontend/assets/img/icon_person.png" id="icon_person" alt="">
@@ -43,9 +43,9 @@
       <section id="follow_us">
         <h3 >Follow us</h3>
         <br>
-        <a href="https://www.facebook.com/"><img src="/Frontend/assets/img/facebook.png" alt="Facebook" class="social_media"></a>
-        <a href="https://www.instagram.com/"><img src="/Frontend/assets/img/instagram.png" alt="Instagram" class="social_media"></a>
-        <a href="https://www.twitter.com/"><img src="/Frontend/assets/img/x.png" alt="Twitter" class="social_media"></a>
+        <a href="https://www.facebook.com/"><img src="/Frontend/src/img/facebook.png" alt="Facebook" class="social_media"></a>
+        <a href="https://www.instagram.com/"><img src="/Frontend/src/img/instagram.png" alt="Instagram" class="social_media"></a>
+        <a href="https://www.twitter.com/"><img src="/Frontend/src/img/x.png" alt="Twitter" class="social_media"></a>
       </section>
     </footer>
     <script src="/Frontend/src/js/student.js"></script>
