--- a/Frontend/src/styles/david.css
+++ b/Frontend/src/styles/david.css
@@ -63,7 +63,7 @@ h3 {
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    background-color: #003366;
+    /* background-color: #003366; */
     padding-left: 33rem;
 }
 
@@ -87,7 +87,7 @@ h3 {
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    background-color: #003366;
+    /* background-color: #003366; */
     padding-left: 34rem;
 }
 
@@ -111,7 +111,7 @@ h3 {
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    background-color: #003366;
+    /* background-color: #003366; */
     padding-left: 38rem;
 }
 
@@ -135,7 +135,7 @@ h3 {
     align-items: center;
     height: 20rem;
     font-size: xx-large;
-    background-color: #003366;
+    /* background-color: #003366; */
     color: white;
     padding-right: 15rem;
 }
@@ -178,7 +178,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: #003366;
+    /* background-color: #003366; */
 }
 
 #section2 article {
@@ -195,4 +195,17 @@ nav {
 
 #welcome h1 {
    margin-left: 15rem;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #ffffff;
+    color: black;
+    background-image: url('/Frontend/src/img/background.png');
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #003366;
+    background-position: center;
 }
