--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -1,71 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
-    <link rel="stylesheet" href="../../styles/david.css"/>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/Logo.png">
-  </head>
+    <link rel="stylesheet" href="../../styles/main.css">
+    <title>Admin</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
 
-  <body>
-    <header>
-      <img src="../../img/Logo.png" id="logo" alt="">
-      <section id="right_header">
-        <button class="button_profile">Admin</button>
-        <img src="../../img/icon_person.png" id="icon_person" alt="">
-      </section>
+<body class="grid-container">
+
+    <header class="header">
+        <a href="../views/home/home.html">
+            <img src="../../img/Logo.png" alt="" class="logo">
+        </a>
+        <div class="flex-container">
+            <button class="button">Admin</button>
+            <img src="../../img/icon_person.png" alt="" class="icon_person">
+        </div>
     </header>
 
-    <section id="welcome">
-      <h1>Welcome admin</h1>
-      <img src="../../img/admin.png" id="welcome_img" alt="">
-    </section>
+    <aside class="aside">
+        <p class="title">Welcome admin</p>
+        <img src="../../img/admin.png" alt="" class="img-aside">
+    </aside>
 
-    <main id="main_admin">
-      <section id="features_admin">
-        <article>
-          <p class="features_p">Course</p>
-          <img src="../../img/course.png" class="feature_img" alt="">
-        </article>
-        <article>
-          <p class="features_p">Qualifications</p>
-          <img src="../../img/qualification.png" class="feature_img" alt="">
-        </article>
-        <article>
-          <p class="features_p">Attendance record</p>
-          <img src="../../img/attendance.png" class="feature_img" alt="">
-        </article>
+    <nav class="nav">
+        <section class="list">
+            <p><b>
+                <a href="#chart-1" class="feature">Course</a>
+                |
+                <a href="#chart-2" class="feature">Subjects</a>
+                |
+                <a href="#chart-3" class="feature">Manage users</a>
+                |
+                <a href="#chart-4" class="feature">Close semester</a> 
+            </b></p>
+        </section>
+    </nav>
 
-      </section>
-      <section id="main_2">
-       <img src="../../img/admin2.png" id="admin2" alt="">
-      </section>
+    <main class="main">
+        <section class="first-chart" id="chart-0">
+            <i class='bx bxs-hand-up'></i>
+            <h3>What do you want to do?</h3>
+        </section>
+        <section class="chart" id="chart-1">
+            <h3>Course</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-2">
+            <h3>Subjects</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-3">
+            <h3>Manage users</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-4">
+            <h3>Close semester</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
     </main>
 
-    <footer>
-      <section>
-        <h3>Contact us</h3>
-        <address>43, Av. Carabobo #42, Medellin, Antoquia</address>
-        <p>Phone: (604) 444 76 54</p>
-        <p>Whatsapp: (57) 3001234567</p>
-      </section>
-      <section>
-        <h3>About us</h3>
-        <ul id="about_us">
-          <li><a href="../../views/home/home.html">Home</a></li>
-          <li>Mission</li>
-          <li>Vision</li>
-        </ul>
-      </section>
-      <section id="follow_us">
-        <h3 >Follow us</h3>
-        <br>
-        <a href="https://www.facebook.com/"><img src="../../img/facebook.png" alt="Facebook" class="social_media"></a>
-        <a href="https://www.instagram.com/"><img src="../../img/instagram.png" alt="Instagram" class="social_media"></a>
-        <a href="https://www.twitter.com/"><img src="../../img/x.png" alt="Twitter" class="social_media"></a>
-      </section>
+    <footer class="footer">
+        <div>
+            <h3>Contact Us</h3>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
+        </div>
+        <div>
+            <h3>About Us</h3>
+            <a href="../views/home/home.html">Home</a>
+            <p>Mission</p>
+            <p>Vision</p>
+        </div>
+        <div class="social">
+            <h3>Our Social Networks</h3>
+            <div class="icons">
+                <i class='bx bxl-facebook'></i>
+                <i class='bx bxl-youtube' ></i>
+                <i class='bx bxl-instagram-alt' ></i>
+            </div>
+        </div>
     </footer>
-    <script src="../../js/admin.js"></script>
-  </body>
+
+    <script src="../../js/main.js"></script>
+</body>
 </html>
