--- a/Frontend/src/views/home/home.html
+++ b/Frontend/src/views/home/home.html
@@ -1,78 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="../../styles/david.css"/>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/Logo.png">
-  </head>
+    <link rel="stylesheet" href="../../styles/main.css">
+    <title>Student</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
 
-  <body>
-    <header>
-      <img src="../../img/Logo.png" id="logo" alt="">
-      <section id="right_header">
-        <button class="button_profile">Sign in</button>
-        <img src="../../img/icon_person.png" id="icon_person" alt="">
-      </section>
+<body class="grid-container">
+
+    <header class="header">
+        <a href="../views/home/home.html">
+            <img src="../../img/Logo.png" alt="" class="logo">
+        </a>
+        <div class="flex-container">
+            <button class="button">Student</button>
+            <img src="../../img/icon_person.png" alt="" class="icon_person">
+        </div>
     </header>
-    <nav>
-        <a href="../../views/home/home.html">Home</a>
-        <a href="#about_us">Contact</a>
-        <a href="">Comunity</a>
-        <a href="">Resources</a>
+
+    <aside class="aside">
+        <p class="title">World University</p>
+    </aside>
+
+    <nav class="nav">
+        <section class="list">
+            <p><b>
+                <a href="#chart-1" class="feature">About us</a>
+                |
+                <a href="#chart-2" class="feature">Mission</a>
+                |
+                <a href="#chart-3" class="feature">Vision</a>
+            </b></p>
+        </section>
     </nav>
 
-    <section id="welcome">
-      <h1>World University</h1>
-    </section>
-
-    <main id="main_home">
-      <section>
-        <img src="../../img/home_img.png" id="home_img" alt="">
-      </section>
+    <main class="main">
+        <section class="first-chart" id="chart-0">
+            <i class='bx bxs-hand-up'></i>
+            <h3>What do you want to do?</h3>
+        </section>
+        <section class="chart" id="chart-1">
+            <h3>About us</h3>
+            <div class="div-chart">
+              <p>Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields</p>
+            </div>
+        </section>
+        <section class="chart" id="chart-2">
+            <h3>Mission</h3>
+            <div class="div-chart">
+              <p>To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment</p>
+            </div>
+        </section>
+        <section class="chart" id="chart-3">
+            <h3>Vision</h3>
+            <div class="div-chart">
+              <p>To be a leading institution known for excellence in education and a positive impact on society</p>
+            </div>
     </main>
 
-    <section id="section2">
-        <article>
-            <h2>About us</h2>
-            <br>
-            <p>Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields</p>
-        </article>
-        <article>
-            <h2>Mission</h2>
-            <br>
-            <p>To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment</p>
-        </article>
-        <article>
-            <h2>Vision</h2>
-            <br>
-            <p>To be a leading institution known for excellence in education and a positive impact on society</p>
-        </article>
-    </section>
-
-    <footer>
-      <section>
-        <h3>Contact us</h3>
-        <address>43, Av. Carabobo #42, Medellin, Antoquia</address>
-        <p>Phone: (604) 444 76 54</p>
-        <p>Whatsapp: (57) 3001234567</p>
-      </section>
-      <section>
-        <h3>About us</h3>
-        <ul id="about_us">
-          <li><a href="../../views/home/home.html">Home</a></li>
-          <li>Mission</li>
-          <li>Vision</li>
-        </ul>
-      </section>
-      <section id="follow_us">
-        <h3 >Follow us</h3>
-        <br>
-        <a href="https://www.facebook.com/"><img src="../../img/facebook.png" alt="Facebook" class="social_media"></a>
-        <a href="https://www.instagram.com/"><img src="../../img/instagram.png" alt="Instagram" class="social_media"></a>
-        <a href="https://www.twitter.com/"><img src="../../img/x.png" alt="Twitter" class="social_media"></a>
-      </section>
+    <footer class="footer">
+        <div>
+            <h3>Contact Us</h3>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
+        </div>
+        <div>
+            <h3>About Us</h3>
+            <a href="../views/home/home.html">Home</a>
+            <p>Mission</p>
+            <p>Vision</p>
+        </div>
+        <div class="social">
+            <h3>Our Social Networks</h3>
+            <div class="icons">
+                <i class='bx bxl-facebook'></i>
+                <i class='bx bxl-youtube' ></i>
+                <i class='bx bxl-instagram-alt' ></i>
+            </div>
+        </div>
     </footer>
-  </body>
+
+    <script src="../../js/main.js"></script>
+</body>
 </html>
