--- a/Frontend/src/views/main.html
+++ b/Frontend/src/views/main.html
@@ -84,13 +84,19 @@
             <p>Mission</p>
             <p>Vision</p>
         </div>
-        <div class="social">
-            <h3>Our Social Networks</h3>
-            <div class="icons">
+        <div class="icons">
+            <a href="https://www.facebook.com/politecnicojic" target="_blank">
                 <i class='bx bxl-facebook'></i>
-                <i class='bx bxl-youtube' ></i>
-                <i class='bx bxl-instagram-alt' ></i>
-            </div>
+            </a>
+            
+            <a href="https://www.youtube.com/@politecnicojic1964" target="_blank">
+                <i class='bx bxl-youtube'></i>
+            </a>
+            
+            <a href="https://www.instagram.com/politecnicojic/" target="_blank">
+                <i class='bx bxl-instagram-alt'></i>
+            </a>
+            
         </div>
     </footer>
 
