--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/Logo.png">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/formsmanagecourse.css">
+
     <title>Teacher</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -31,11 +33,13 @@
                 |
                 <a href="#chart-1" class="feature">Attendance Registration</a>
                 |
-                <a href="#chart-2" class="feature">Manage Course</a>
+                <a href="#chart-2" class="feature"> Registration Manage Course</a>
                 |
                 <a href="#chart-3" class="feature">Calendar</a>
                 |
                 <a href="#chart-4" class="feature">Schedule</a> 
+                |
+                <a href="#chart-5" class="feature">See Course Material</a> 
             </b></p>
         </section>
     </nav>
@@ -46,25 +50,41 @@
             <h3>What do you want to do?</h3>
         </section>
         <section class="chart" id="chart-1">
-            <h3>Feature1</h3>
+            <h3>Attendance Registration</h3>
             <div class="div-chart">
-
             </div>
         </section>
         <section class="chart" id="chart-2">
-            <h3>Feature2</h3>
-            <div class="div-chart">
-
+            <h3>Registration Manage Course</h3>
+            <div class="div-chart4">
+                <form action="" class="managecourse-form">
+                    <label for="subject-id">Course ID</label>
+                    <input type="text" name="subject-id" id="subject-id" required>
+                    
+                    <label for="course-material-id">Course Material ID</label>
+                    <input type="text" name="course-material-id" id="course-material-id" required>
+                    
+                    <label for="material-title">Material Title</label>
+                    <input type="text" name="material-title" id="material-title" required>
+                    
+                    <label for="material-description">Material Description</label>
+                    <input type="text" name="material-description" id="material-description" required>
+                    
+                    <button type="submit" class="admin-button">Submit</button>
+                    <button type="button" class="admin-button">Consult</button>
+                    <button type="button" class="admin-button">Delete</button>
+                </form>
             </div>
         </section>
+        
         <section class="chart" id="chart-3">
-            <h3>Feature3</h3>
+            <h3>Calendar</h3>
             <div class="div-chart">
 
             </div>
         </section>
         <section class="chart" id="chart-4">
-            <h3>Feature4</h3>
+            <h3>Schedule</h3>
             <div class="div-chart">
 
             </div>
@@ -103,6 +123,6 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="../../js/main.js"></script>
 </body>
 </html>
