--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -120,7 +120,7 @@
                 <label for="last-name2">2nd Last Name</label>
                 <input type="text" name="last-name2" id="last-name2">
                 <label for="role">Role</label>
-                <select id="roles">
+                <select id="roles" title=".">
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
                     <option value="staff">Staff</option>
