--- a/Frontend/src/views/main.html
+++ b/Frontend/src/views/main.html
@@ -87,13 +87,13 @@
         <div class="social">
             <h3>Our Social Networks</h3>
             <div class="icons">
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/politecnicojic">
                     <i class='bx bxl-facebook'></i>
                 </a>
-                <a href="https://www.youtube.com/">
+                <a href="https://www.youtube.com/@politecnicojic1964">
                     <i class='bx bxl-youtube' ></i>
                 </a>
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/politecnicojic/">
                     <i class='bx bxl-instagram-alt' ></i>
                 </a>
             </div>
