--- a/Frontend/src/views/staff/staff.html
+++ b/Frontend/src/views/staff/staff.html
@@ -32,11 +32,11 @@
                 |
                 <a href="#chart-1" class="feature">Enrollment Management</a>
                 |
-                <a href="#chart-2" class="feature">See Courses</a>
+                <a href="#chart-2" class="feature">Courses</a>
                 |
-                <a href="#chart-3" class="feature">See Teachers</a>
+                <a href="#chart-3" class="feature">Teachers</a>
                 |
-                <a href="#chart-4" class="feature">See Students</a> 
+                <a href="#chart-4" class="feature">Students</a> 
             </b></p>
         </section>
     </nav>
@@ -87,19 +87,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
+                            <td>100</td>
                             <td>Math</td>
                             <td>1</td>
                             <td>John Doe</td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <td>200</td>
                             <td>Science</td>
                             <td>2</td>
                             <td>Jane Doe</td>
                         </tr>
                         <tr>
-                            <td>3</td>
+                            <td>300</td>
                             <td>History</td>
                             <td>3</td>
                             <td>John Smith</td>
@@ -124,19 +124,19 @@
                         <tr>
                             <td>1</td>
                             <td>John Doe</td>
-                            <td>1</td>
+                            <td>10</td>
                             <td>Math</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>Jane Doe</td>
-                            <td>2</td>
+                            <td>20</td>
                             <td>Science</td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>John Smith</td>
-                            <td>3</td>
+                            <td>30</td>
                             <td>History</td>
                         </tr>
                     </tbody>
@@ -149,21 +149,24 @@
                 <table class="table">
                     <thead>
                         <tr>
+                            <th>Student ID</th>
                             <th>Name</th>
-                            <th>Age</th>
-                            <th>Grade</th>
+                            <th>Last Name</th>
+                            <th>Semester</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Student 1</td>
-                            <td>10</td>
-                            <td>5</td>
+                            <td>1</td>
+                            <td>Maria</td>
+                            <td>Arcila</td>
+                            <td>6</td>
                         </tr>
                         <tr>
-                            <td>Student 2</td>
-                            <td>12</td>
-                            <td>6</td>
+                            <td>2</td>
+                            <td>Manuela</td>
+                            <td>Diaz</td>
+                            <td>7</td>
                         </tr>
                     </tbody>
                 </table>
@@ -187,13 +190,13 @@
         <div class="social">
             <h3>Our Social Networks</h3>
             <div class="icons">
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/politecnicojic">
                     <i class='bx bxl-facebook'></i>
                 </a>
-                <a href="https://www.youtube.com/">
+                <a href="https://www.youtube.com/@politecnicojic1964">
                     <i class='bx bxl-youtube' ></i>
                 </a>
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/politecnicojic/">
                     <i class='bx bxl-instagram-alt' ></i>
                 </a>
             </div>
