--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -44,10 +44,10 @@
     </nav>
 
     <main class="main">
-        <!-- <section class="first-chart" id="chart-0">
+        <section class="first-chart" id="chart-0">
             <i class='bx bxs-hand-up'></i>
             <h3>What do you want to do?</h3>
-        </section> -->
+        </section>
         <section class="chart" id="chart-1">
             <h3>Course Material</h3>
             <div class="div-chart">
