--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -17,7 +17,7 @@
         </a>
         <div class="flex-container">
             <button class="button">User</button>
-            <img src="../../img/icon_person.png" alt="" class="icon_person">
+            <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
 
